{
  "version": 4,
  "terraform_version": "1.6.3",
  "serial": 152,
  "lineage": "e52b09d6-f807-ed72-385c-7b2d8b47ec7c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "server_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04c77047c24f47588",
            "arn": "arn:aws:ec2:eu-west-1:411203042855:elastic-ip/eipalloc-04c77047c24f47588",
            "association_id": "eipassoc-08f217823ad173101",
            "domain": "vpc",
            "id": "eipalloc-04c77047c24f47588",
            "instance": "i-0d35934d05eb68abd",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-06c1f33dfbc638238",
            "private_dns": "ip-10-0-0-8.eu-west-1.compute.internal",
            "private_ip": "10.0.0.8",
            "public_dns": "ec2-34-246-48-46.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.246.48.46",
            "public_ipv4_pool": "amazon",
            "region": "eu-west-1",
            "tags": {
              "Name": "webserver-elastic-ip-1"
            },
            "tags_all": {
              "Name": "webserver-elastic-ip-1"
            }
          },
          "dependencies": [
            "aws_instance.server_instance",
            "aws_key_pair.ssh_key",
            "aws_security_group.web_sg",
            "aws_subnet.public",
            "aws_vpc.ca_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "server_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0ef0fafba270833fc",
            "arn": "arn:aws:ec2:eu-west-1:411203042855:instance/i-0d35934d05eb68abd",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d35934d05eb68abd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2-instance-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-06c1f33dfbc638238"
              }
            ],
            "primary_network_interface_id": "eni-06c1f33dfbc638238",
            "private_dns": "ip-10-0-0-8.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.8",
            "region": "eu-west-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00878cff0379e8809",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a07d693171f22c1d",
            "tags": {
              "Name": "webserver-instance-1"
            },
            "tags_all": {
              "Name": "webserver-instance-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d13626f5dc3111ff"
            ]
          },
          "dependencies": [
            "aws_key_pair.ssh_key",
            "aws_security_group.web_sg",
            "aws_subnet.public",
            "aws_vpc.ca_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:411203042855:internet-gateway/igw-00a917de33f9570bd",
            "id": "igw-00a917de33f9570bd",
            "owner_id": "411203042855",
            "region": "eu-west-1",
            "tags": {
              "Name": "main-internet-gateway"
            },
            "tags_all": {
              "Name": "main-internet-gateway"
            },
            "vpc_id": "vpc-00c3474e72b424cea"
          },
          "dependencies": [
            "aws_vpc.ca_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:411203042855:route-table/rtb-0dfd7c15ff56d1ab4",
            "id": "rtb-0dfd7c15ff56d1ab4",
            "owner_id": "411203042855",
            "propagating_vgws": [],
            "region": "eu-west-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00a917de33f9570bd",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-table"
            },
            "tags_all": {
              "Name": "public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-00c3474e72b424cea"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.ca_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04c872ddb3f919612",
            "region": "eu-west-1",
            "route_table_id": "rtb-0dfd7c15ff56d1ab4",
            "subnet_id": "subnet-0a07d693171f22c1d"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public",
            "aws_vpc.ca_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:411203042855:security-group/sg-0d13626f5dc3111ff",
            "description": "Allow HTTP, HTTPS, SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all traffic out of the instance ",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d13626f5dc3111ff",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow port 22 inbound for SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow port 443 inbound for HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow port 80 inbound for http",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow port 8080 inbound for Server",
                "from_port": 8080,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "webserver-security_group",
            "name_prefix": "",
            "owner_id": "411203042855",
            "region": "eu-west-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "webserver-security-group"
            },
            "tags_all": {
              "Name": "webserver-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-00c3474e72b424cea"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ca_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:411203042855:subnet/subnet-0d9ba603ccd9d588e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.0.16/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d9ba603ccd9d588e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "411203042855",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Name": "private-subnet"
            },
            "tags_all": {
              "Name": "private-subnet"
            },
            "vpc_id": "vpc-00c3474e72b424cea"
          },
          "dependencies": [
            "aws_vpc.ca_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:411203042855:subnet/subnet-0a07d693171f22c1d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.0.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a07d693171f22c1d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "411203042855",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Name": "public-subnet"
            },
            "tags_all": {
              "Name": "public-subnet"
            },
            "vpc_id": "vpc-00c3474e72b424cea"
          },
          "dependencies": [
            "aws_vpc.ca_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ca_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:411203042855:vpc/vpc-00c3474e72b424cea",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/27",
            "default_network_acl_id": "acl-0e278780252bdefc3",
            "default_route_table_id": "rtb-087bc1189029a2db7",
            "default_security_group_id": "sg-069869467f6c3625e",
            "dhcp_options_id": "dopt-02d31c298299fc524",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00c3474e72b424cea",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-087bc1189029a2db7",
            "owner_id": "411203042855",
            "region": "eu-west-1",
            "tags": {
              "Name": "custom-vpc"
            },
            "tags_all": {
              "Name": "custom-vpc"
            }
          }
        }
      ]
    }
  ]
}